# modular-sdk

./: .gitignore  CHANGELOG.md  MANIFEST.in  README.md  parent_scopes.md  pyproject.toml  requirements.txt  setup.cfg  tox.ini
.github/: dependabot.yml
.github/workflows/: build-and-check-python-package.yml  ci.yml  pypi-package.yml
modular_sdk/: __init__.py  modular.py
modular_sdk/commons/: __init__.py  constants.py  error_helper.py  exception.py  helpers.py  log_helper.py  time_helper.py  trace_helper.py
modular_sdk/connections/: mongodb_connection.py  rabbit_connection.py
modular_sdk/helpers/: response_helper.py
modular_sdk/models/: application.py  base_meta.py  customer.py  customer_settings.py  execution_trace.py  heartbeat.py  job.py  operation_mode.py  parent.py  region.py  setting.py  tenant.py  tenant_settings.py
modular_sdk/models/pynamodb_extension/: base_model.py  base_role_access_model.py  base_safe_update_model.py  pynamodb_to_pymongo_adapter.py  tenant_result_iterator.py
modular_sdk/models/pynamongo/: __init__.py  adapter.py  attributes.py  convertors.py  indexes_creator.py  models.py  patch.py  utils.py
modular_sdk/services/: application_service.py  aws_creds_provider.py  customer_service.py  customer_settings_service.py  environment_service.py  events_service.py  http_transport_service.py  job_service.py  lambda_service.py  parent_service.py  rabbit_transport_service.py  region_service.py  settings_management_service.py  sqs_service.py  ssm_service.py  sts_service.py  tenant_service.py  tenant_settings_service.py  thread_local_storage_service.py
modular_sdk/services/impl/: maestro_credentials_service.py  maestro_http_transport_service.py  maestro_rabbit_transport_service.py  maestro_signature_builder.py
modular_sdk/strategies/: abstract_strategy.py
modular_sdk/strategies/impl/: http_strategy.py  rabbitmq_strategy.py
modular_sdk/utils/job_tracer/: abstract.py  generic.py
modular_sdk/utils/operation_mode/: abstract.py  generic.py
modular_sdk/utils/runtime_tracer/: abstract.py  generic.py
patch_scripts/3.3.0/: patch_parent_scope.py
tests/: test_base_safe_update_model.py  test_constants.py  test_maestro_signature_builder.py  test_trace_helper.py  test_utils.py
tests/test_commons/: __init__.py  import_helper.py  utils.py
tests/test_models/: test_base_safe_update_model.py
tests/tests_pynamongo/: conftest.py  test_adapter_no_attributes_patch.py  test_convertors.py  test_indexes_creator.py  test_models.py
