[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"


[project]
name = "modular_sdk"
version = "6.1.1"
authors = [
    {name = "EPAM Systems", email = "support@syndicate.team"}
]
license = {file = "LICENSE"}
description = "Data level integration for services built atop of Modular Framework"
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent"
]
dependencies = [
    "pika==1.3.2",
    "pynamodb>=5.5.1,<6",
    "boto3>=1.26.80,<1.35",
    "botocore>=1.29.80,<1.35",
    "pymongo~=4.5.0",
    "python-dateutil>=2.8.2,<3.0",
    "cachetools~=5.4.0",
    "dynamodb-json~=1.4.2",
    "aws-xray-sdk~=2.14.0"
]

[project.urls]
Homepage = "https://github.com/epam/modular-sdk"
Documentation = "https://github.com/epam/modular-sdk/blob/main/README.md"
Repository = "https://github.com/me/spam.git"
Changelog = "https://github.com/epam/modular-sdk/blob/main/CHANGELOG.md"


[tool.setuptools.packages.find]
where = ["."]
include = ["modular_sdk*"]
exclude = ["tests*", "patch_scripts*"]
namespaces = false


[project.optional-dependencies]
cryptography = [
    "cryptography~=41.0.7"
]

[tool.pyright]
include = ["modular_sdk/"]
exclude = [
    "**/__pycache__",
]
pythonVersion = "3.8"
reportIncompatibleMethodOverride = "warning"
executionEnvironments = [
    {root = "tests/", pythonVersion = "3.8", extraPaths = ["modular_sdk/"]}
]

