[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"


[project]
name = "modular_sdk"
version = "7.0.0"
authors = [
    {name = "EPAM Systems", email = "support@syndicate.team"}
]
license = {file = "LICENSE"}
description = "Data level integration for services built atop of Modular Framework"
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent"
]
dependencies = [
    "pika~=1.3.2",
    "pynamodb==5.5.1",
    "boto3>=1.36.11",
    "botocore>=1.36.11",
    "pymongo~=4.11.2",
    "python-dateutil>=2.9.0.post0",
    "cachetools~=5.5.1",
]

[dependency-groups]
test = [
    "pytest>=8.3.2",
    "mongomock>=4",
    "pytest-xdist>=3.6.1",
    "pytest-cov>=6.0.0",
]


[project.urls]
Homepage = "https://github.com/epam/modular-sdk"
Documentation = "https://github.com/epam/modular-sdk/blob/main/README.md"
Repository = "https://github.com/me/spam.git"
Changelog = "https://github.com/epam/modular-sdk/blob/main/CHANGELOG.md"


[tool.setuptools.packages.find]
where = ["."]
include = ["modular_sdk*"]
exclude = ["tests*", "patch_scripts*"]
namespaces = false


[project.optional-dependencies]
cryptography = [
    "cryptography~=43.0.3",
]
hvac = [
    "hvac~=2.1.0",
]


[tool.pytest.ini_options]
pythonpath = ["modular_sdk"]
testpaths = ["tests"]


[tool.pyright]
include = ["modular_sdk/"]
exclude = [
    "**/__pycache__",
]
pythonVersion = "3.10"
reportIncompatibleMethodOverride = "warning"
executionEnvironments = [
    {root = "tests/", pythonVersion = "3.10", extraPaths = ["./"]}
]

[tool.ruff]
line-length = 79
src = ["modular_sdk", "tests"]

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
skip-magic-trailing-comma = true

