[metadata]
name = modular_sdk
version = 4.0.1
python_requires = >=3.8
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
license : Apache-2.0
description = Data level integration for services built atop of Modular Framework
author=EPAM Systems
author_email=support@syndicate.team
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/epam/modular-sdk

[options]
packages = find:
include_package_data = True
install_requires =
    pika==1.0.0b1
    pynamodb==5.3.2
    boto3==1.26.80
    botocore==1.29.80
    dynamodb-json==1.3
    pymongo==4.5.0
    python-dateutil==2.8.2
    simplejson==3.19.1
    six==1.16.0
    urllib3==1.26.16
    boltons==23.0.0
    aws-xray-sdk==2.12.0
    cachetools==5.3.1

[options.extras_require]
cryptography =
    cryptography==41.0.3
    pycparser==2.21
    cffi==1.15.1